# DesktopMarker

./: CMakeLists.txt  README.md
src/: drawingoverlay.cpp  drawingoverlay.h  hovertab.cpp  hovertab.h  main.cpp  settingsdialog.cpp  settingsdialog.h  settingsmanager.cpp  settingsmanager.h  stroke.h  strokemanager.cpp  strokemanager.h
